Fixed path serialization issue